[package]
name = "megachess-c3rb3r"
version = "0.1.0"
authors = ["Andres Bonilla <andresdb91@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.13.0"
serde_json = "1.0.64"
uuid = "0.8.2"
wither = "0.9.0"
wither_derive = "0.9.0"
rust-argon2 = "0.8.3"
