[package]
name = "megachess-c3rb3r"
version = "0.1.0"
authors = ["Andres Bonilla <andresdb91@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tokio = "1.3.0"
futures = "0.3.13"
tokio-tungstenite = "0.14.0"
async-trait = "0.1.48"
serde_json = "1.0.64"
uuid = "0.8.2"
wither = "0.9.0"
wither_derive = "0.9.0"
rust-argon2 = "0.8.3"

[dependencies.tokio]
version = "1.3.0"
features = ["full"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
